[project]
authors=[{ name="wangjunxue", email="wangjunxue@ys4fun.com" }]
dependencies=["mistune>=3.0.2", "typst>=0.11.0"]
description="Add your description here"
name="typstrender"
readme="README.md"
requires-python=">=3.12"
version="0.1.0"

[build-system]
build-backend="hatchling.build"
requires=["hatchling"]

[tool.rye]
dev-dependencies=[]
managed=true

[tool.hatch.metadata]
allow-direct-references=true

[tool.hatch.build.targets.wheel]
packages=["typstrender"]
